@@ -137,6 +137,14 @@ module PageObject
         def forward
           @browser.navigate.forward
         end
+        
+        #
+        # platform method to clear the cookies from the browser
+        # See PageObject#clear_cookies
+        #
+        def clear_cookies
+          @browser.manage.delete_all_cookies
+        end
 
         #
         # platform method to get the value stored in a text field
