@@ -9,6 +9,7 @@
   * Added #style to Element
   * Added #inspect to Element
   * Added #current_url to PageObject
+  * Added #clear_cookies to PageObject
   * Updated to use selenium-webdriver 2.7.0
   * Updated to use watir-webdriver 0.3.4
 
